RESOLVED FIXED82546
compositing/tiling/crash-reparent-tiled-layer.html is flakey
https://bugs.webkit.org/show_bug.cgi?id=82546
Summary compositing/tiling/crash-reparent-tiled-layer.html is flakey
Simon Fraser (smfr)
Reported 2012-03-28 16:03:26 PDT
compositing/tiling/crash-reparent-tiled-layer.html is flakey (the tiled layer flag changes).
Attachments
Patch (3.25 KB, patch)
2012-10-10 18:25 PDT, Simon Fraser (smfr)
bdakin: review+
Simon Fraser (smfr)
Comment 1 2012-10-10 18:25:05 PDT
Beth Dakin
Comment 2 2012-10-10 20:37:44 PDT
Comment on attachment 168111 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=168111&action=review > Source/WebCore/ChangeLog:8 > + When calling layerTreeAsText() inside the document laod event, laod
Simon Fraser (smfr)
Comment 3 2012-10-10 21:07:48 PDT
Note You need to log in before you can comment on or make changes to this bug.