compositing/tiling/crash-reparent-tiled-layer.html is flakey https://bugs.webkit.org/show_bug.cgi?id=82546

Reviewed by Beth Dakin.

Source/WebCore:

When calling layerTreeAsText() inside the document load event,
GraphicsLayerCA may have not flushed layers yet, so layer tree
properties that are affected by flushing (tiled layer, visible
rects) appeared flakey in tests.

Fix by forcing a flush before dumping the layer tree.

* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::layerTreeAsText):

LayoutTests:

Unskip a previously-flakey tiled layer test that should not be flakey after this change.

* platform/mac/TestExpectations:

Canonical link: https://commits.webkit.org/116981@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131009 268f45cc-cd09-0410-ab3c-d52691b4dbfc